<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_contacts">

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.contactmanager.ui.contacts.ContactListFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contact_list" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.contactmanager.ui.events.EventListFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_event_list" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="com.example.contactmanager.ui.logs.ContactLogListFragment"
        android:label="@string/title_logs"
        tools:layout="@layout/fragment_contact_log_list" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.contactmanager.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

</navigation>